--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* estilos de react */
 .App {
   text-align: center;
 }
@@ -36,3 +37,56 @@
     transform: rotate(360deg);
   }
 }
+
+/* estilos creados por mi*/
+
+
+nav{
+  height: 100px;
+  background-color:white;
+  text-align: center;
+}
+
+nav ul{
+   list-style: none;
+   display: inline-block;
+   padding:18px;
+}
+
+nav ul li{
+    float: left;
+    margin-top: 20px;
+}
+
+nav ul li a {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 18px;
+}
+
+nav ul li a:hover{
+  background-color:black;
+  color: white;
+}
+
+h1{
+  color: purple;
+}
+.container{
+  width:100%;
+  
+}
+.content {
+  width:100%;
+  height: 770px;
+}
+
+.footer {
+  width: 100%;
+  background-color: #f00;
+}
+
+
+
